# chat-link-generator

./: Cargo.toml  README.md  build_and_copy.sh  skins_flags_full.csv  skins_probe_suggestions.json
src/: catalog.rs  config.rs  encoder.rs  item_db.rs  lib.rs
src/db/: fetcher.rs  ingame_items.rs  items.rs  mod.rs  outfits.rs  pois.rs  recipes.rs  skills.rs  skins.rs  traits.rs
src/ui/: main_window.rs  mod.rs  settings.rs  workbench.rs
tools/: fetch_all_skins_flags.py
