[package]
name = "chat-link-generator"
version = "1.0.0"
edition = "2021"
authors = ["hvaren"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nexus = { git = "https://github.com/zerthox/nexus-rs", rev = "ddd5d46" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["rt"] }
